# Fitment_prediction

./: main.py  pyproject.toml
experiment/: Final_imputed_Filled.xlsx  X_train_df.joblib  experiment3.ipynb  experiment_1.ipynb  experiment_2.ipynb  offered_ctc_model.joblib
model/: X_train_df.joblib  hiring_model_v1.joblib
new_data/: ESS-Hiring- Skill level Row data_Masked- ML.xlsx  ESS-Retention- Skill level Row data_Masked- ML.xlsx  Embedded Grid- Dummy.xlsx  Embedded Grid- Remade 29th July.xlsx  Internal CTC Grid- Remade 8th August.xlsx  ~$ESS-Retention- Skill level Row data_Masked- ML.xlsx
scripts/: benchmark_utils.py  constants.py  main_api.py  main_utils.py  model_utils.py  schema_validation_api.py  shap_utils.py
src/: main_app.py  new_main.py  new_shap_app.py  new_utils.py  offered_ctc_app_with_waterfall.py  shap_with_waterfall.py  utils.py
src-today/: 08-04-25.py  utils.py
