[project]
name = "fitment-decision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "category-encoders>=2.8.1",
    "fastapi>=0.116.1",
    "ipykernel>=6.30.0",
    "matplotlib>=3.10.3",
    "numpy>=1.26.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "pydantic>=2.11.7",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "shap>=0.48.0",
    "streamlit>=1.47.1",
    "uvicorn>=0.35.0",
]
